fix positioning bug; fix visual test performance on firefox (drops css3 grid)

--- a/src/css/ui.coverflow.css
+++ b/src/css/ui.coverflow.css
@@ -10,7 +10,6 @@
          -o-perspective: 1000px;
             perspective: 1000px;
 
-    display: inline-block;
     position: absolute;
 
 }
@@ -19,6 +18,7 @@
     -webkit-box-reflect: below 10px -webkit-gradient(linear, left top, left bottom, from(black), color-stop(.7, black), to(transparent));
     position: relative;
     cursor: pointer;
+    float: left;
 }
 
 .ui-coverflow-item:focus {
