--- a/tests/css/visual.css
+++ b/tests/css/visual.css
@@ -6,47 +6,19 @@
 
     padding: 20px 0;
 
-    /* http://lea.verou.me/css3patterns/#blueprint-grid */
-    background-color:#269;
+    /**
+     *
+     * http://lea.verou.me/css3patterns/#blueprint-grid
+     * can't use css3 grid as firefox performance goes crazy
+     * at least you can't call it performance..
+     */
+    background: url(../img/grid.jpg) repeat top left #269;
 
-    background-image:
-        linear-gradient(white 2px, transparent 2px),
-        linear-gradient(90deg, white 2px, transparent 2px),
-        linear-gradient(rgba(255,255,255,.3) 1px, transparent 1px),
-        linear-gradient(90deg, rgba(255,255,255,.3) 1px, transparent 1px);
-
-    background-image:
-        -moz-linear-gradient(white 2px, transparent 2px),
-        -moz-linear-gradient(0deg, white 2px, transparent 2px),
-        -moz-linear-gradient(rgba(255,255,255,.3) 1px, transparent 1px),
-        -moz-linear-gradient(0deg, rgba(255,255,255,.3) 1px, transparent 1px);
-
-    background-image:
-        -webkit-linear-gradient(white 2px, transparent 2px),
-        -webkit-linear-gradient(0deg, white 2px, transparent 2px),
-        -webkit-linear-gradient(rgba(255,255,255,.3) 1px, transparent 1px),
-        -webkit-linear-gradient(0deg, rgba(255,255,255,.3) 1px, transparent 1px);
-
-    background-image:
-        -o-linear-gradient(white 2px, transparent 2px),
-        -o-linear-gradient(0deg, white 2px, transparent 2px),
-        -o-linear-gradient(rgba(255,255,255,.3) 1px, transparent 1px),
-        -o-linear-gradient(0deg, rgba(255,255,255,.3) 1px, transparent 1px);
-
-    background-image:
-        -ms-linear-gradient(white 2px, transparent 2px),
-        -ms-linear-gradient(0deg, white 2px, transparent 2px),
-        -ms-linear-gradient(rgba(255,255,255,.3) 1px, transparent 1px),
-        -ms-linear-gradient(0deg, rgba(255,255,255,.3) 1px, transparent 1px);
-
-    background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
-    background-position:-2px -2px, -2px -2px, -1px -1px, -1px -1px;
 }
 
 .wrapper {
     margin: 50px auto 0;
     height: 600px;
-    background: rgba( 255, 255, 255, .2 );
 }
 #coverflow {
     width: 800px;
